log
Wed 05 Apr 2023 03:03:56 PM UTC: 
 tests:  0|6
total_score: 0/70
620b205
Wed 05 Apr 2023 03:10:00 PM UTC: 
 hashmap.c | 41 ++++++++++++++++++++++++-----------------
 1 file changed, 24 insertions(+), 17 deletions(-)
 tests:  0|6
total_score: 0/70
71c25e5
Wed 05 Apr 2023 03:20:41 PM UTC: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:65:30: error: expected ‘;’ before ‘mapa’
   65 |   mapa -> capacity = capacity
      |                              ^
      |                              ;
   66 |   mapa -> current = -1
      |   ~~~~                        
hashmap.c:69:1: error: control reaches end of non-void function [-Werror=return-type]
   69 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
6a06a1d
Wed 05 Apr 2023 03:20:52 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:66:23: error: expected ‘;’ before ‘return’
   66 |   mapa -> current = -1
      |                       ^
      |                       ;
   67 | 
   68 |   return mapa;
      |   ~~~~~~               
hashmap.c:69:1: error: control reaches end of non-void function [-Werror=return-type]
   69 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
7314955
Wed 05 Apr 2023 03:21:01 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
e114755
Wed 05 Apr 2023 03:42:54 PM UTC: 
 hashmap.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:48:25: error: passing argument 1 of ‘hash’ from incompatible pointer type [-Werror=incompatible-pointer-types]
   48 |   int bucketBusc = hash(map, key);
      |                         ^~~
      |                         |
      |                         HashMap * {aka struct HashMap *}
hashmap.c:28:17: note: expected ‘char *’ but argument is of type ‘HashMap *’ {aka ‘struct HashMap *’}
   28 | long hash(char *key, long capacity)
      |           ~~~~~~^~~
hashmap.c:48:30: error: passing argument 2 of ‘hash’ makes integer from pointer without a cast [-Werror=int-conversion]
   48 |   int bucketBusc = hash(map, key);
      |                              ^~~
      |                              |
      |                              char *
hashmap.c:28:27: note: expected ‘long int’ but argument is of type ‘char *’
   28 | long hash(char *key, long capacity)
      |                      ~~~~~^~~~~~~~
hashmap.c:49:3: error: unknown type name ‘pair’; did you mean ‘Pair’?
   49 |   pair *prev = NULL;
      |   ^~~~
      |   Pair
hashmap.c:51:3: error: unknown type name ‘pair’; did you mean ‘Pair’?
   51 |   pair *par = map -> buckets[bucketBusc];
      |   ^~~~
      |   Pair
hashmap.c:51:15: error: initialization of ‘int *’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   51 |   pair *par = map -> buckets[bucketBusc];
      |               ^~~
hashmap.c:53:9: error: ‘pair’ undeclared (first use in this function); did you mean ‘par’?
   53 |   while(pair != NULL && strcmp(map -> key, key) != 0))
      |         ^~~~
      |         par
hashmap.c:53:9: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:53:36: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘key’
   53 |   while(pair != NULL && strcmp(map -> key, key) != 0))
      |                                    ^~
hashmap.c:53:54: error: expected statement before ‘)’ token
   53 |   while(pair != NULL && strcmp(map -> key, key) != 0))
      |                                                      ^
hashmap.c:56:15: error: request for member ‘next’ in something not a structure or union
   56 |     par = par -> next;
      |               ^~
hashmap.c:49:9: error: variable ‘prev’ set but not used [-Werror=unused-but-set-variable]
   49 |   pair *prev = NULL;
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
4c2d0c2
Wed 05 Apr 2023 03:43:12 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:48:25: error: passing argument 1 of ‘hash’ from incompatible pointer type [-Werror=incompatible-pointer-types]
   48 |   int bucketBusc = hash(map, key);
      |                         ^~~
      |                         |
      |                         HashMap * {aka struct HashMap *}
hashmap.c:28:17: note: expected ‘char *’ but argument is of type ‘HashMap *’ {aka ‘struct HashMap *’}
   28 | long hash(char *key, long capacity)
      |           ~~~~~~^~~
hashmap.c:48:30: error: passing argument 2 of ‘hash’ makes integer from pointer without a cast [-Werror=int-conversion]
   48 |   int bucketBusc = hash(map, key);
      |                              ^~~
      |                              |
      |                              char *
hashmap.c:28:27: note: expected ‘long int’ but argument is of type ‘char *’
   28 | long hash(char *key, long capacity)
      |                      ~~~~~^~~~~~~~
hashmap.c:54:9: error: ‘pair’ undeclared (first use in this function); did you mean ‘par’?
   54 |   while(pair != NULL && strcmp(map -> key, key) != 0))
      |         ^~~~
      |         par
hashmap.c:54:9: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:54:36: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘key’
   54 |   while(pair != NULL && strcmp(map -> key, key) != 0))
      |                                    ^~
hashmap.c:54:54: error: expected statement before ‘)’ token
   54 |   while(pair != NULL && strcmp(map -> key, key) != 0))
      |                                                      ^
hashmap.c:57:15: error: ‘Pair’ has no member named ‘next’
   57 |     par = par -> next;
      |               ^~
hashmap.c:50:9: error: variable ‘prev’ set but not used [-Werror=unused-but-set-variable]
   50 |   Pair *prev = NULL;
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
de334d4
Wed 05 Apr 2023 03:43:49 PM UTC: 
 hashmap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:48:25: error: passing argument 1 of ‘hash’ from incompatible pointer type [-Werror=incompatible-pointer-types]
   48 |   int bucketBusc = hash(map, key);
      |                         ^~~
      |                         |
      |                         HashMap * {aka struct HashMap *}
hashmap.c:28:17: note: expected ‘char *’ but argument is of type ‘HashMap *’ {aka ‘struct HashMap *’}
   28 | long hash(char *key, long capacity)
      |           ~~~~~~^~~
hashmap.c:48:30: error: passing argument 2 of ‘hash’ makes integer from pointer without a cast [-Werror=int-conversion]
   48 |   int bucketBusc = hash(map, key);
      |                              ^~~
      |                              |
      |                              char *
hashmap.c:28:27: note: expected ‘long int’ but argument is of type ‘char *’
   28 | long hash(char *key, long capacity)
      |                      ~~~~~^~~~~~~~
hashmap.c:54:35: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘key’
   54 |   while(par != NULL && strcmp(map -> key, key) != 0))
      |                                   ^~
hashmap.c:54:53: error: expected statement before ‘)’ token
   54 |   while(par != NULL && strcmp(map -> key, key) != 0))
      |                                                     ^
hashmap.c:57:15: error: ‘Pair’ has no member named ‘next’
   57 |     par = par -> next;
      |               ^~
hashmap.c:50:9: error: variable ‘prev’ set but not used [-Werror=unused-but-set-variable]
   50 |   Pair *prev = NULL;
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
fdcfdb8
Wed 05 Apr 2023 03:44:26 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:48:25: error: passing argument 1 of ‘hash’ from incompatible pointer type [-Werror=incompatible-pointer-types]
   48 |   int bucketBusc = hash(map, key);
      |                         ^~~
      |                         |
      |                         HashMap * {aka struct HashMap *}
hashmap.c:28:17: note: expected ‘char *’ but argument is of type ‘HashMap *’ {aka ‘struct HashMap *’}
   28 | long hash(char *key, long capacity)
      |           ~~~~~~^~~
hashmap.c:48:30: error: passing argument 2 of ‘hash’ makes integer from pointer without a cast [-Werror=int-conversion]
   48 |   int bucketBusc = hash(map, key);
      |                              ^~~
      |                              |
      |                              char *
hashmap.c:28:27: note: expected ‘long int’ but argument is of type ‘char *’
   28 | long hash(char *key, long capacity)
      |                      ~~~~~^~~~~~~~
hashmap.c:54:53: error: expected statement before ‘)’ token
   54 |   while(par != NULL && strcmp(par -> key, key) != 0))
      |                                                     ^
hashmap.c:57:15: error: ‘Pair’ has no member named ‘next’
   57 |     par = par -> next;
      |               ^~
hashmap.c:50:9: error: variable ‘prev’ set but not used [-Werror=unused-but-set-variable]
   50 |   Pair *prev = NULL;
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
1c8481b
